# CRaystal

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.vscode-default/: settings.json
Source/CRayli/: CMakeLists.txt  CRayli.cpp
Source/CRaystal/: CMakeLists.txt  CRaystal.h
Source/CRaystal/Core/: BVH.cu  BVH.h  Buffer.cu  Buffer.h  Camera.cpp  Camera.cu  Camera.h  CameraProxy.h  DeviceArray.h  Enum.h  Error.cpp  Error.h  Frame.cu  Frame.h  Helloworld.cpp  Helloworld.cu  Helloworld.h  Hit.h  Integrator.cu  Integrator.h  Intersection.cu  Intersection.h  Macros.h  Material.cu  Material.h  Object.h  Sampler.cu  Sampler.h  Sensor.cu  Sensor.h  Spectrum.cpp  Spectrum.h  SpectrumTabData.h  Texture.cu  Texture.h  Vec.cpp  Vec.h  Walkthrough.cu  Walkthrough.h
Source/CRaystal/Material/: BSDF.cu  BSDF.h  Fresnel.cu  Fresnel.h  LambertianBRDF.cu  PhongBRDF.cu  PrincipledBRDF.cu
Source/CRaystal/Math/: AABB.cu  AABB.h  CRayMath.cu  CRayMath.h  MathDefs.h  Ray.cu  Ray.h  Sampling.cu  Sampling.h
Source/CRaystal/Scene/: Scene.cu  Scene.h  Shape.h  Sphere.cu  Sphere.h  Triangle.cu  Triangle.h
Source/CRaystal/Utils/: CVariant.h  CudaUtils.h  DebugUtils.cu  DebugUtils.h  Image.cpp  Image.h  Importer.cpp  Importer.h  Logger.cpp  Logger.h  Progress.cpp  Progress.h
Tests/: CMakeLists.txt  CameraTest.cpp  CoreTest.cpp  ImageTest.cpp
Tools/: spectrum.py
